--- a/css/geral.css
+++ b/css/geral.css
@@ -289,6 +289,30 @@ body {
     }
 }
 
-
+.js [data-anime="scroll"] {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+    transition: .3s;
+  }
   
+.js [data-anime="scroll"].ativo {
+opacity: 1;
+transform: translate3d(0, 0, 0);
+}
+
+[data-semana]::after {
+    display: inline-block;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background: #E54;
+    border-radius: 50%;
+    margin-left: 4px;
+    border: 2px solid #000;
+  }
+  
+[data-semana].aberto::after {
+background: #3F4;
+}
+
 
